[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Light/Cat/cat.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Light/Cat/Cat.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="StreamTexture" id=6]

[sub_resource type="RectangleShape2D" id=7]

[node name="Cat" type="AnimatedSprite"]
material = SubResource( 1 )
position = Vector2( 645.06, 226 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
playing = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
texture = SubResource( 6 )

[node name="CatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatArea"]
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 7 )

[node name="RescueBar" type="ProgressBar" parent="."]
visible = false
margin_left = -23.5017
margin_top = -31.3326
margin_right = 23.4983
margin_bottom = -17.3326
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_exiting" from="." to="." method="_on_Cat_tree_exiting"]
[connection signal="area_entered" from="CatArea" to="." method="_on_CatArea_area_entered"]
[connection signal="area_exited" from="CatArea" to="." method="_on_CatArea_area_exited"]
